--- a/TheETProject/Base.lproj/Main.storyboard
+++ b/TheETProject/Base.lproj/Main.storyboard
@@ -192,10 +192,10 @@
             </objects>
             <point key="canvasLocation" x="2439" y="-1469"/>
         </scene>
-        <!--City Tab Bar View Controller-->
+        <!--City Tab Bar Controller-->
         <scene sceneID="9QM-oP-eCf">
             <objects>
-                <tabBarController id="ZUj-jM-gkn" customClass="CityTabBarViewController" customModule="TheETProject" customModuleProvider="target" sceneMemberID="viewController">
+                <tabBarController id="ZUj-jM-gkn" customClass="CityTabBarController" customModule="TheETProject" customModuleProvider="target" sceneMemberID="viewController">
                     <tabBar key="tabBar" contentMode="scaleToFill" id="EbF-Sk-cix">
                         <rect key="frame" x="0.0" y="0.0" width="320" height="49"/>
                         <autoresizingMask key="autoresizingMask"/>
@@ -291,6 +291,7 @@
                         <outlet property="citySearchBar" destination="dM2-lu-3xX" id="oUA-KE-gbw"/>
                         <outlet property="containerView" destination="Tgn-4G-eFr" id="2nM-ew-FWY"/>
                         <outlet property="mapView" destination="PHg-Bh-OP0" id="IpQ-Bh-VTJ"/>
+                        <segue destination="ZUj-jM-gkn" kind="show" identifier="showPlaceInfo" id="YOv-96-iHv"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="UA3-vb-3Pm" userLabel="First Responder" sceneMemberID="firstResponder"/>
@@ -348,36 +349,42 @@
                         <rect key="frame" x="0.0" y="0.0" width="361" height="82"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="81" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="UgV-8L-e30">
+                            <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="55" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="UgV-8L-e30">
                                 <rect key="frame" x="0.0" y="0.0" width="361" height="82"/>
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                 <prototypes>
-                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" selectionStyle="blue" hidesAccessoryWhenEditing="NO" indentationLevel="1" indentationWidth="0.0" reuseIdentifier="resultCell" rowHeight="81" id="bH8-zk-4Ni" customClass="PlaceTableViewCell" customModule="TheETProject" customModuleProvider="target">
-                                        <rect key="frame" x="0.0" y="28" width="361" height="81"/>
+                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" selectionStyle="blue" hidesAccessoryWhenEditing="NO" indentationLevel="1" indentationWidth="0.0" reuseIdentifier="resultCell" id="bH8-zk-4Ni" customClass="PlaceTableViewCell" customModule="TheETProject" customModuleProvider="target">
+                                        <rect key="frame" x="0.0" y="28" width="361" height="55"/>
                                         <autoresizingMask key="autoresizingMask"/>
                                         <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="bH8-zk-4Ni" id="eWo-2W-dZo">
-                                            <rect key="frame" x="0.0" y="0.0" width="361" height="80.5"/>
+                                            <rect key="frame" x="0.0" y="0.0" width="361" height="54.5"/>
                                             <autoresizingMask key="autoresizingMask"/>
                                             <subviews>
                                                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Name" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="xvd-Re-mOf">
-                                                    <rect key="frame" x="26" y="16" width="45" height="20.5"/>
-                                                    <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                                    <rect key="frame" x="26" y="8" width="40.5" height="18"/>
+                                                    <fontDescription key="fontDescription" type="system" pointSize="15"/>
                                                     <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
                                                     <nil key="highlightedColor"/>
                                                 </label>
                                                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Country" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Nqp-b1-sUV">
-                                                    <rect key="frame" x="26" y="44.5" width="52" height="17"/>
-                                                    <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                                    <rect key="frame" x="26" y="31" width="48.5" height="16"/>
+                                                    <fontDescription key="fontDescription" type="system" pointSize="13"/>
                                                     <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
                                                     <nil key="highlightedColor"/>
                                                 </label>
                                             </subviews>
                                             <constraints>
-                                                <constraint firstItem="Nqp-b1-sUV" firstAttribute="top" secondItem="xvd-Re-mOf" secondAttribute="bottom" constant="8" id="ZX2-Aa-UXg"/>
-                                                <constraint firstItem="xvd-Re-mOf" firstAttribute="top" secondItem="eWo-2W-dZo" secondAttribute="topMargin" constant="8" id="fuh-pB-MG5"/>
+                                                <constraint firstItem="Nqp-b1-sUV" firstAttribute="top" secondItem="xvd-Re-mOf" secondAttribute="bottom" constant="5" id="ZX2-Aa-UXg"/>
+                                                <constraint firstItem="xvd-Re-mOf" firstAttribute="top" secondItem="eWo-2W-dZo" secondAttribute="topMargin" id="fuh-pB-MG5"/>
                                                 <constraint firstItem="xvd-Re-mOf" firstAttribute="leading" secondItem="eWo-2W-dZo" secondAttribute="leadingMargin" constant="18" id="mrI-BQ-AMU"/>
                                                 <constraint firstItem="Nqp-b1-sUV" firstAttribute="leading" secondItem="xvd-Re-mOf" secondAttribute="leading" id="rtY-Rw-X58"/>
+                                                <constraint firstAttribute="bottomMargin" secondItem="Nqp-b1-sUV" secondAttribute="bottom" constant="3" id="uVT-fG-Hjv"/>
                                             </constraints>
+                                            <variation key="default">
+                                                <mask key="constraints">
+                                                    <exclude reference="uVT-fG-Hjv"/>
+                                                </mask>
+                                            </variation>
                                         </tableViewCellContentView>
                                         <connections>
                                             <outlet property="countryLabel" destination="Nqp-b1-sUV" id="KuP-u6-Whk"/>
@@ -412,6 +419,7 @@
         <image name="closeButton" width="14" height="12"/>
     </resources>
     <inferredMetricsTieBreakers>
+        <segue reference="YOv-96-iHv"/>
         <segue reference="Gc1-wB-uJu"/>
     </inferredMetricsTieBreakers>
 </document>
