--- a/TheETProject/Base.lproj/Main.storyboard
+++ b/TheETProject/Base.lproj/Main.storyboard
@@ -3,6 +3,7 @@
     <dependencies>
         <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="9530"/>
+        <capability name="Aspect ratio constraints" minToolsVersion="5.1"/>
         <capability name="Constraints to layout margins" minToolsVersion="6.0"/>
         <capability name="Constraints with non-1.0 multipliers" minToolsVersion="5.1"/>
     </dependencies>
@@ -159,34 +160,95 @@
                         <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Weather" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="dxF-UE-ruG">
-                                <rect key="frame" x="268" y="93" width="64.5" height="20.5"/>
-                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                                <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Weather description" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="dxF-UE-ruG">
+                                <rect key="frame" x="214" y="217" width="172" height="23"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="19"/>
+                                <color key="textColor" red="1" green="1" blue="1" alpha="1" colorSpace="calibratedRGB"/>
                                 <nil key="highlightedColor"/>
                             </label>
-                            <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="1s4-3p-LyU">
-                                <rect key="frame" x="28" y="20" width="31" height="30"/>
-                                <state key="normal" title="&lt;---"/>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Place, Country" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="XU2-R7-6ce">
+                                <rect key="frame" x="250" y="250" width="100" height="22"/>
+                                <fontDescription key="fontDescription" name="BodoniSvtyTwoITCTT-Book" family="Bodoni 72" pointSize="18"/>
+                                <color key="textColor" red="0.91764705879999997" green="0.36862745099999999" blue="0.35686274509999999" alpha="1" colorSpace="calibratedRGB"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="1s4-3p-LyU">
+                                <rect key="frame" x="20" y="20" width="13" height="22"/>
+                                <state key="normal" image="Back Chevron"/>
                                 <connections>
                                     <segue destination="BYZ-38-t0r" kind="show" id="vf6-8k-lvh"/>
                                 </connections>
                             </button>
+                            <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="hFx-ra-kQ0">
+                                <rect key="frame" x="210" y="60" width="180" height="137"/>
+                                <color key="backgroundColor" red="0.9882352941176471" green="0.93333333333333335" blue="0.48627450980392156" alpha="1" colorSpace="calibratedRGB"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="128" id="1a4-5S-oP4"/>
+                                    <constraint firstAttribute="width" secondItem="hFx-ra-kQ0" secondAttribute="height" multiplier="197:150" id="8TO-zz-Knd"/>
+                                    <constraint firstAttribute="width" constant="197" id="VUM-xy-qjJ"/>
+                                </constraints>
+                                <variation key="default">
+                                    <mask key="constraints">
+                                        <exclude reference="1a4-5S-oP4"/>
+                                        <exclude reference="VUM-xy-qjJ"/>
+                                    </mask>
+                                </variation>
+                            </imageView>
+                            <view alpha="0.40000000000000002" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="1w6-vy-2e1">
+                                <rect key="frame" x="0.0" y="371" width="600" height="180"/>
+                                <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                            </view>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="temp" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Mgm-oO-fhQ">
+                                <rect key="frame" x="40" y="307" width="64" height="33.5"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="28"/>
+                                <color key="textColor" red="1" green="1" blue="1" alpha="1" colorSpace="calibratedRGB"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="time" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="QCl-bc-Meu">
+                                <rect key="frame" x="505.5" y="307" width="54.5" height="33.5"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="28"/>
+                                <color key="textColor" red="1" green="1" blue="1" alpha="1" colorSpace="calibratedRGB"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="next weekend" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="EcV-cn-EPa">
+                                <rect key="frame" x="20" y="346" width="106" height="20.5"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <color key="textColor" red="0.91764705882352937" green="0.36862745098039218" blue="0.35686274509803922" alpha="1" colorSpace="calibratedRGB"/>
+                                <nil key="highlightedColor"/>
+                            </label>
                         </subviews>
                         <color key="backgroundColor" red="0.57647058823529407" green="0.83529411764705885" blue="0.84313725490196079" alpha="1" colorSpace="calibratedRGB"/>
                         <constraints>
-                            <constraint firstItem="dxF-UE-ruG" firstAttribute="leading" secondItem="8qh-Eu-Vgw" secondAttribute="leadingMargin" constant="255" id="16P-jU-2Qp"/>
-                            <constraint firstItem="dxF-UE-ruG" firstAttribute="top" secondItem="nWi-dJ-J4m" secondAttribute="bottom" constant="73" id="NpN-bc-pHc"/>
-                            <constraint firstItem="dxF-UE-ruG" firstAttribute="centerX" secondItem="8qh-Eu-Vgw" secondAttribute="centerX" id="UZu-U1-p7u"/>
+                            <constraint firstItem="XU2-R7-6ce" firstAttribute="centerX" secondItem="dxF-UE-ruG" secondAttribute="centerX" id="83O-vJ-a4B"/>
+                            <constraint firstItem="1w6-vy-2e1" firstAttribute="leading" secondItem="8qh-Eu-Vgw" secondAttribute="leading" id="AIQ-Mq-hP5"/>
+                            <constraint firstItem="1s4-3p-LyU" firstAttribute="leading" secondItem="8qh-Eu-Vgw" secondAttribute="leadingMargin" id="C0D-UC-0JT"/>
+                            <constraint firstItem="1w6-vy-2e1" firstAttribute="height" secondItem="8qh-Eu-Vgw" secondAttribute="height" multiplier="0.3" id="Csu-3G-jTo"/>
+                            <constraint firstAttribute="trailing" secondItem="1w6-vy-2e1" secondAttribute="trailing" id="Doh-ic-7qV"/>
+                            <constraint firstItem="Mgm-oO-fhQ" firstAttribute="leading" secondItem="8qh-Eu-Vgw" secondAttribute="leadingMargin" constant="20" id="FQt-Qy-Nrz"/>
+                            <constraint firstItem="1w6-vy-2e1" firstAttribute="top" secondItem="EcV-cn-EPa" secondAttribute="bottom" constant="4" id="JfY-7a-1Ui"/>
+                            <constraint firstItem="XU2-R7-6ce" firstAttribute="top" secondItem="dxF-UE-ruG" secondAttribute="bottom" constant="10" id="KDF-zv-sMk"/>
+                            <constraint firstItem="Mgm-oO-fhQ" firstAttribute="top" secondItem="XU2-R7-6ce" secondAttribute="bottom" constant="35" id="KhD-kZ-RPN"/>
+                            <constraint firstAttribute="trailingMargin" secondItem="QCl-bc-Meu" secondAttribute="trailing" constant="20" id="LU9-nq-VJB"/>
+                            <constraint firstAttribute="leadingMargin" secondItem="EcV-cn-EPa" secondAttribute="leading" id="MMb-xJ-Ef3"/>
+                            <constraint firstItem="Opg-Cu-YaR" firstAttribute="top" secondItem="1w6-vy-2e1" secondAttribute="bottom" id="PGS-vw-Nsn"/>
+                            <constraint firstItem="hFx-ra-kQ0" firstAttribute="centerX" secondItem="8qh-Eu-Vgw" secondAttribute="centerX" id="Qqb-fM-BcA"/>
+                            <constraint firstItem="hFx-ra-kQ0" firstAttribute="width" secondItem="8qh-Eu-Vgw" secondAttribute="width" multiplier="0.3" id="UgA-uf-yei"/>
+                            <constraint firstItem="1s4-3p-LyU" firstAttribute="top" secondItem="nWi-dJ-J4m" secondAttribute="bottom" id="Y6T-H3-MZM"/>
+                            <constraint firstItem="hFx-ra-kQ0" firstAttribute="top" secondItem="nWi-dJ-J4m" secondAttribute="bottom" constant="40" id="aFM-5P-akv"/>
+                            <constraint firstItem="QCl-bc-Meu" firstAttribute="baseline" secondItem="Mgm-oO-fhQ" secondAttribute="baseline" id="bu6-yZ-H2m"/>
+                            <constraint firstItem="dxF-UE-ruG" firstAttribute="centerX" secondItem="hFx-ra-kQ0" secondAttribute="centerX" id="vSh-19-naH"/>
+                            <constraint firstItem="dxF-UE-ruG" firstAttribute="top" secondItem="hFx-ra-kQ0" secondAttribute="bottom" constant="20" id="yeO-wq-3QL"/>
                         </constraints>
-                        <variation key="default">
-                            <mask key="constraints">
-                                <exclude reference="16P-jU-2Qp"/>
-                            </mask>
-                        </variation>
                     </view>
                     <tabBarItem key="tabBarItem" title="Item" id="vqh-lx-Y3s"/>
                     <navigationItem key="navigationItem" title="Title" id="piZ-nR-Zmc"/>
+                    <connections>
+                        <outlet property="CurrentTemperatureLabel" destination="Mgm-oO-fhQ" id="ga3-RW-bAi"/>
+                        <outlet property="localTimeLabel" destination="QCl-bc-Meu" id="im2-ye-aNO"/>
+                        <outlet property="placeLabel" destination="XU2-R7-6ce" id="KKE-er-CO5"/>
+                        <outlet property="weatherDescriptionImageView" destination="hFx-ra-kQ0" id="tix-zI-Hp8"/>
+                        <outlet property="weatherDescriptionLabel" destination="dxF-UE-ruG" id="VZi-Gv-hoH"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="S8i-Zq-kQf" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
@@ -416,10 +478,11 @@
         </scene>
     </scenes>
     <resources>
+        <image name="Back Chevron" width="13" height="18"/>
         <image name="closeButton" width="14" height="12"/>
     </resources>
     <inferredMetricsTieBreakers>
-        <segue reference="YOv-96-iHv"/>
         <segue reference="vf6-8k-lvh"/>
+        <segue reference="YOv-96-iHv"/>
     </inferredMetricsTieBreakers>
 </document>
